@@ -21,3 +21,4 @@ from chrome.webdriver import WebDriver as Chrome
 from ie.webdriver import WebDriver as Ie
 from remote.webdriver import WebDriver as Remote
 from common.desired_capabilities import DesiredCapabilities
+from common.action_chains import ActionChains
